<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_gundem"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_tumhaberler" />

    <item
        android:id="@+id/navigation_ekonomi"
        android:icon="@mipmap/finance"
        android:title="@string/title_ekomomi" />

    <item
        android:id="@+id/navigation_dunya"
        android:icon="@mipmap/world"
        android:title="@string/title_dunya" />

    <item
        android:id="@+id/navigation_spor"
        android:icon="@mipmap/sport"
        android:title="@string/title_spor" />

    <item
        android:id="@+id/navigation_magazin"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_magazin" />



</menu>
